--- a/src/librustc_codegen_utils/Cargo.toml
+++ b/src/librustc_codegen_utils/Cargo.toml
@@ -10,6 +10,7 @@ path = "lib.rs"
 test = false
 
 [dependencies]
+ar = "0.7.0"
 log = "0.4"
 punycode = "0.4.0"
 rustc-demangle = "0.1.16"
@@ -17,6 +18,7 @@ rustc-demangle = "0.1.16"
 syntax = { path = "../libsyntax" }
 syntax_pos = { path = "../libsyntax_pos" }
 rustc = { path = "../librustc" }
+rustc_allocator = { path = "../librustc_allocator" }
 rustc_target = { path = "../librustc_target" }
 rustc_data_structures = { path = "../librustc_data_structures" }
 rustc_metadata = { path = "../librustc_metadata" }
