--- a/src/librustc_interface/Cargo.toml
+++ b/src/librustc_interface/Cargo.toml
@@ -35,4 +35,4 @@ rustc_resolve = { path = "../librustc_resolve" }
 tempfile = "3.0.5"
 once_cell = "1"
 
-rustc_codegen_cranelift = { path = "../../../rustc_codegen_cranelift" }
+#rustc_codegen_cranelift = { path = "../../../rustc_codegen_cranelift" }
